Fix for freesearch

--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -10,7 +10,16 @@ Implementations
 */
 
 .tab-implementation {
+    width: 100%;
     height: 94vh;
+}
+
+/* 
+Freesearch
+*/
+
+.freesearch {
+    width: 100%;
 }
 
 /* 
