Fix more layout

--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -118,6 +118,16 @@ Aarsregnskap
 }
 
 /*
+Bofregistry
+*/
+
+.bofregistry {
+    height: 100%;
+    width: 100%;
+    padding: 1rem;
+}
+
+/*
 SkjemapdfViewer
 */
 
