--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -142,12 +142,22 @@ Bofregistry
     font-weight: bold;
 }
 
+.bofregistry-table-bedrift-aggrid {
+    width: 100%;
+    height: 45vh;
+}
+
 .bofregistry-modal {
     height: 90vh !important;
 }
 
 .bofregistry-modal-body {
     height: 80vh;
+}
+
+.bofregistry-modal-aggrid {
+    height: 100% !important;
+    width: 100% !important;
 }
 
 /*
