--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -66,6 +66,29 @@ Variable selector
 }
 
 /*
+Sidebar button
+*/
+
+.sidebar-button-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    word-break: break-all;
+    margin-bottom: 5%;
+    width: 100%;
+}
+
+.sidebar-button-icon-spot {
+    display: block;
+    font-size: 1.5rem;
+}
+
+.sidebar-button-label-spot {
+    display: block;
+    font-size: 0.7rem;
+}
+
+/*
 Implementations
 */
 
