Add module for displaying a custom figure and with possibility to connect it to the variable selector

--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -184,6 +184,20 @@ Bofregistry
 }
 
 /*
+Figuredisplay
+*/
+
+.figuredisplay {
+    height:100%;
+    width: 100%;
+}
+
+.figuredisplay-graph {
+    height:100%;
+    width: 100%;
+}
+
+/*
 SkjemapdfViewer
 */
 
