Create multifigure module and move figure and table modules into their own folder

--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -197,6 +197,16 @@ Figuredisplay
     width: 100%;
 }
 
+.multifigure {
+    height: 100%;
+    width: 100%;
+}
+
+.multifigure-content {
+    height: 100%;
+    width: 100%;
+}
+
 /*
 SkjemapdfViewer
 */
