added lower transparency for rows with fremmede bedrifter, ran pre-commit hooks and added types, and added a diff-col to the detail-grid

--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -327,6 +327,10 @@ MacroModule
     color: rgb(0, 0, 0) !important;
 }
 
+.macromodule-naring-mismatch {
+    opacity: 0.5 !important;
+}
+
 /*
 canvas
 */
