--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -131,12 +131,13 @@ Aarsregnskap
 }
 
 .aarsregnskap-pdf-col {
+    padding: 15px;
     flex: 1;
     min-height: 0;
 }
 
 .aarsregnskap-pdf-iframe {
-    width: 100%;
+    width: 120vh;
     height: 100%;
     border: none;
 }
@@ -200,7 +201,7 @@ Bofregistry
 
 .bofregistry-table-bedrift-aggrid {
     width: 100%;
-    height: 45vh;
+    height: 55vh !important;
 }
 
 .bofregistry-modal {
@@ -213,8 +214,21 @@ Bofregistry
 
 .bofregistry-modal-aggrid {
     height: 100% !important;
-    width: 100% !important;
+    width: 60vh !important;
 }
+
+/*
+Altinn Editor History
+*/
+.history-modal .modal-dialog {
+    max-width: 70vw !important;
+    width: 80vw !important;
+}
+
+.history-modal .modal-content {
+    height: 60vh !important;
+}
+
 
 /*
 MacroModule
