--- a/src/ssb_dash_framework/assets/stylesheet.css
+++ b/src/ssb_dash_framework/assets/stylesheet.css
@@ -234,12 +234,13 @@ Altinn Editor History
 Altinn Editor Support Tables
 */
 .hjelpetabeller-modal .modal-dialog {
-    max-width: 70vw !important;
-    width: 80vw !important;
+    max-width: 90vw !important;
+    width: 90vw !important;
 }
 
 .hjelpetabeller-modal .modal-content {
-    height: 60vh !important;
+    height: 70vh !important;
+    overflow: hidden;
 }
 
 /*
